# Autonomous_Mobile_Robot_via_Machine_Learning

./: .gitignore  README.md  camera_node_entry_point.py  diagram.md  index.html  pos_finder_node_entry_point.py  simulation.md  slam_node_entry_point.py
Data/: raw_dataset_lidar.csv  rosbag_to_csv.py
data/: merged_lidar_odom_data.csv  raw_dataset_odom.csv
src/: DDPG.py  (+3 more)
src/ml_robotics_project/: package.xml  setup.cfg  setup.py
src/ml_robotics_project/launch/: debug_launch.py  demo_launch.py  pub_launch.py  rel_pos_finder_launch.py  sim_launch.py  sys_launch.py
src/ml_robotics_project/ml_robotics_project/: AStarNode.py  CameraPresenterNode.py  INode.py  NodeTemplate.py  PpoNode.py  SlamNode.py  YoloNode.py  a_star_node_functions.py  camera_node_entry_point.py  motor_node_functions.py  pos_finder_node_entry_point.py  ppo_node_entry_point.py  ppo_rl_node_functions.py  slam_node_entry_point.py  slam_ul_node_functions.py  stream_image.py  yolo_node_entry_point.py  yolo_sl_node_functions.py
src/ml_robotics_project/ml_robotics_project/UI/: CameraView.py  CameraViewAdapter.py  ICameraView  ICameraViewAdapter.py
src/ml_robotics_project/ml_robotics_project/algorithm_handlers/: AStarHandler.py  IAStarHandler.py  IPpoHandler.py  ISlamHandler.py  IYoloHandler.py  PpoHandler.py  SlamHandler.py  YoloHandler.py
src/ml_robotics_project/ml_robotics_project/ml_algorithms/: AStar.py  IAStar.py  IPpo.py  ISlam.py  IYolo.py  Ppo.py  Slam.py  Yolo.py
src/ml_robotics_project/ml_robotics_project/ros_nodes/: AStarNode.py  CameraNode.py  CameraPresenterNode.py  INode.py  PosFinderNode.py  PpoNode.py  SlamNode.py  YoloNode.py
src/ml_robotics_project/ml_robotics_project/tmp/: NodeTemplate.py  motor_node.py  tmp.py  yolo.py  yolo_keypoints_pose.py
src/ml_robotics_project/ml_robotics_project/util/: ROS_message_utils.py
(+2088 files in other folders)
