<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ml_robotics_project</name>
  <version>0.0.0</version>
  <description>For CS7641 final group project</description>
  <maintainer email="jacob.blevins@gatech.edu">Jacob Blevins</maintainer>
  <license>Apache-2.0</license>

  <!--All python import statements go here-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-ultralytics-pip</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <!-- Find registered ROS2 python packages at https://github.com/ros/rosdistro/blob/master/rosdep/python.yaml-->

  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!--Interfaces-->
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!--
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>ml_robotics_interfaces</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  -->

  <!-- This is supposed to help with launch files (I don't know how/why) -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
